fix(FEC-13174): fix z-index and overflow of side panels (#858)
### Description of the Changes

**Issue:**
If for element uses `position: absolute` and `overflow: hidden` - all
child content with absolute position will limited by the element sizes.
That causes issue for tooltips and popups that should overlap parent
elements (regardless of size).

**Fix:**
1. use `overflow: hidden` for child of element that uses `position:
absolute`, so all relative children nodes will be limited by parent size
and absolute children will not.
2. use z-index only for small player size (when side panels should take
all player area and overlap the player controls).


#### Resolves https://kaltura.atlassian.net/browse/FEC-13174

--- a/src/components/side-panel/_side-panel.scss
+++ b/src/components/side-panel/_side-panel.scss
@@ -1,9 +1,12 @@
 .side-panel {
   position: absolute;
-  overflow: hidden;
   transition: all #{$default-transition-time}ms;
   transition-property: left, right, bottom, top, opacity;
-  z-index: 1;
+  z-index: 0;
+  &.small-size {
+    // for small sizes the side panel should be over player controls
+    z-index: 1;
+  }
 }
 
 .vertical-side-panel {
@@ -19,4 +22,5 @@
 .side-panel-content {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
